syntax = "proto3";

package ss;

option java_multiple_files = true;
option java_package = "com.lazycece.grpc.ss.proto";
option java_outer_classname = "SStreamProto";

// 定义服务
service SStreamService {
    rpc sayHello (HelloRequest) returns (stream HelloResponse) {}
}

// 定义请求体负载
message HelloRequest {
    string name = 1;
}

// 定义返回体负载
message HelloResponse {
    string message = 1;
}
